# EcliPanel

./: .better-web-ui.md  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  LICENSE  README.md  SECURITY.md  SHOWCASE.md  TODO.md  docker-compose.yaml  package.json  pnpm-lock.yaml  skills-lock.json
.claude/: settings.json
antiabuse/: .env.example  Cargo.toml  README.md
antiabuse/src/: backend.rs  config.rs  detector.rs  main.rs  parser.rs  runtime.rs  scanner.rs  state.rs
tunnel/client/: Cargo.toml
tunnel/client/src/: main.rs
tunnel/server/: Cargo.toml
tunnel/server/src/: main.rs
wings/output/application/: Cargo.toml
wings/output/application/src/: config.rs  main.rs  stats.rs
wings/output/application/src/commands/: migrate_disk_limiter.rs
wings/output/application/src/dpi/: engine.rs
wings/output/application/src/io/: counting_reader.rs  hash_reader.rs  tail.rs
wings/output/application/src/io/compression/: writer.rs
wings/output/application/src/routes/: mod.rs
wings/output/application/src/routes/api/: mod.rs  update.rs
wings/output/application/src/routes/api/system/: mod.rs
wings/output/application/src/routes/api/transfers/: mod.rs  query.rs
wings/output/application/src/routes/download/: file.rs
wings/output/application/src/server/: antiabuse.rs  manager.rs  panel_sync.rs  resources.rs  soc.rs  transfer.rs
wings/output/application/src/server/backup/: manager.rs
wings/output/application/src/server/backup/adapters/: ddup_bak.rs  pbs.rs  s3.rs  wings.rs
wings/output/application/src/server/configuration/process/: toml.rs  xml.rs
wings/output/application/src/server/diff/: manager.rs
wings/output/application/src/server/executor/: noop.rs
wings/output/application/src/server/executor/docker/: mod.rs
wings/output/application/src/server/filesystem/: disk_checker.rs  file.rs  inotify.rs
wings/output/application/src/server/filesystem/limiter/: fuse_quota.rs
wings/output/application/src/server/filesystem/pull/: resolver.rs
wings/output/application/src/server/filesystem/virtualfs/: cap.rs
wings/output/application/src/server/tunnel/: mod.rs
wings/output/application/src/server/websocket/: handler.rs  mod.rs
wings/output/application/src/ssh/: auth.rs
wings/patched/pbs-client/: Cargo.toml
wings/patched/pbs-client/src/: naming.rs
wings/patched/pbs-client/src/pxar/: encoder.rs
wings/source/: Cargo.toml  Dockerfile
wings/source/application/: Cargo.toml
wings/source/application/src/: main.rs  models.rs  utils.rs
wings/source/application/src/commands/: migrate_disk_limiter.rs  mod.rs
wings/source/application/src/io/: abort.rs  counting_writer.rs  fixed_reader.rs  limited_reader.rs  mod.rs
wings/source/application/src/remote/: client.rs  jwt.rs  mod.rs
wings/source/application/src/routes/: mod.rs
wings/source/application/src/routes/api/: mod.rs
wings/source/application/src/routes/api/ports/: mod.rs  used.rs
wings/source/application/src/routes/api/servers/: mod.rs  utilization.rs
wings/source/application/src/routes/api/system/: config.rs
wings/source/application/src/routes/api/transfers/: files.rs  mod.rs
wings/source/application/src/routes/download/: backup.rs  files.rs
wings/source/application/src/server/: activity.rs  mod.rs  script.rs  state.rs
wings/source/application/src/server/backup/: mod.rs  transfer.rs
wings/source/application/src/server/diff/: manager.rs
wings/source/application/src/server/executor/: mod.rs
wings/source/application/src/server/schedule/: actions.rs
wings/source/application/src/server/tunnel/: tcp.rs
wings/source/application/src/ssh/: shell.rs
wings/source/pbs-client/src/: accessor.rs  datablob.rs  error.rs  manifest.rs  tls.rs
wings/source/unrar-rs/src/: open_archive.rs
wings/source/unrar-rs/unrar_sys/examples/: lister.rs
wings/wings-main/: Cargo.toml  Dockerfile  LICENSE  README.md  compose.yml
wings/wings-main/.github/: FUNDING.yml
wings/wings-main/.github/workflows/: build.yml  release.yml
wings/wings-main/application/: .gitignore  Cargo.toml  build.rs  seccomp.json
wings/wings-main/application/src/: bins.rs  config.rs  deserialize.rs  lib.rs  main.rs  models.rs  payload.rs  response.rs  stats.rs  utils.rs
wings/wings-main/application/src/commands/: configure.rs  diagnostics.rs  mod.rs  service_install.rs  version.rs
wings/wings-main/application/src/io/: abort.rs  counting_reader.rs  counting_writer.rs  fixed_reader.rs  hash_reader.rs  limited_reader.rs  limited_writer.rs  mod.rs  range_reader.rs  tail.rs
wings/wings-main/application/src/io/compression/: mod.rs  reader.rs  writer.rs
wings/wings-main/application/src/remote/: backups.rs  client.rs  jwt.rs  mod.rs  servers.rs
wings/wings-main/application/src/routes/: mod.rs
wings/wings-main/application/src/routes/api/: deauthorize_user.rs  mod.rs  update.rs
wings/wings-main/application/src/routes/download/: backup.rs  directory.rs  file.rs  files.rs  mod.rs
wings/wings-main/application/src/routes/upload/: file.rs  mod.rs
wings/wings-main/application/src/server/: activity.rs  container.rs  installation.rs  manager.rs  mod.rs  permissions.rs  resources.rs  script.rs  state.rs  transfer.rs
wings/wings-main/application/src/server/backup/: manager.rs  mod.rs
wings/wings-main/application/src/server/configuration/: mod.rs  seccomp.rs
wings/wings-main/application/src/server/filesystem/: inotify.rs  mod.rs  operations.rs  usage.rs  writer.rs
wings/wings-main/application/src/server/schedule/: actions.rs  conditions.rs  manager.rs  mod.rs
wings/wings-main/application/src/server/websocket/: handler.rs  jwt.rs  message_handler.rs  mod.rs
wings/wings-main/application/src/ssh/: auth.rs  exec.rs  mod.rs  ratelimiter.rs  shell.rs
wings/wings-main/application/src/ssh/sftp/: extended.rs  mod.rs
wings/wings-main/unrar-rs/: README.md
wings/wings-main/unrar-rs/examples/: basic_extract.rs  lister.rs
wings/wings-main/unrar-rs/src/: lib.rs
wings/wings-main/unrar-rs/src/pathed/: all.rs  linux.rs
wings/wings-main/unrar-rs/unrar_sys/: build.rs
wings/wings-main/unrar-rs/unrar_sys/src/: lib.rs
(+1081 files in other folders)
