[package]
name = "eclipanel-antiabuse"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["clock"] }
once_cell = "1"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
walkdir = "2.5.0"
sha2 = "0.10"
md5 = "0.7"
hex = "0.4"
memchr = "2.7"
base64 = "0.22"
