[package]
name = "ecli-tunnel-client"
version = "0.1.0"
edition = "2021"

[dependencies]
 tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
 reqwest = { version = "0.13.2", features = ["json", "rustls"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio-tungstenite = "0.20"
 http = "0.2"
 futures-util = "0.3"
 tracing = "0.1"
 tracing-subscriber = "0.3"
 clap = { version = "4.4", features = ["derive"] }
 base64 = "0.21"
 anyhow = "1.0"
 dirs = "5.0"