[package]
name = "ecli-tunnel-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "io-util", "net", "time"] }
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
uuid = { version = "1", features = ["v4"] }
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = { version = "0.3", features = ["sink"] }
tracing = "0.1"
tracing-subscriber = "0.3"
base64 = "0.22"