[package]
name = "ecli-tunnel-server"
version = "0.2.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "io-util", "net", "time"] }
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
uuid = { version = "1", features = ["v4"] }
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = { version = "0.3", features = ["sink"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
base64 = "0.22"
rustls = "0.23"
tokio-rustls = "0.26"
rcgen = "0.13"
rustls-pemfile = "2"
dirs = "5"
gethostname = "0.5"