[workspace]
resolver = "3"
members = ["application", "unrar-rs"]
default-members = ["application"]
package.rust-version = "1.93.0"

[workspace.dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.1", features = ["http2", "ws", "multipart"] }
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
axum-extra = { version = "0.12.1", features = ["query"] }
bollard = "0.18.1"
serde = { version = "1.0.138", features = ["derive"] }
serde_json = { version = "1.0.139", features = ["preserve_order"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "preserve_order", "chrono", "indexmap", "uuid"] }
utoipa-axum = "0.2.0"
reqwest = { version = "0.13.0", features = ["hickory-dns", "json", "multipart", "stream"] }
tokio = { version = "1.43.0", features = ["full"] }
chrono = { version = "0.4.40", features = ["serde"] }
futures-util = "0.3.31"
tokio-util = { version = "0.7.15", features = ["full"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
rand = "0.9.1"
regex = "1.12.2"

[profile.dev.package."*"]
opt-level = 2

[profile.dev]
# only enable when needed, slows down compile times significantly
debug = false

[profile.release.package."*"]
opt-level = "s"
codegen-units = 1
strip = true

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
strip = true
