[package]
name = "pbs-client"
version = "0.1.0"
edition = "2024"
rust-version = { workspace = true }
description = "Proxmox Backup Server client (token auth, fingerprint pinning, DataBlob + dynamic-index writer/reader)"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true, features = ["io-util", "sync", "rt", "net"] }
uuid = { workspace = true }
h2 = "0.4"
hyper = { version = "1.10", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
tokio-rustls = "0.26.4"
rustls = { workspace = true }
bytes = { workspace = true }
sha2 = { workspace = true }
crc32fast = { workspace = true }
fastcdc = { version = "4.0.1", features = ["tokio"] }
zstd = { workspace = true }
hex = { workspace = true }
tar = { workspace = true }
siphasher = "1"
compact_str = { workspace = true }
positioned-io = { workspace = true }
futures = { workspace = true }

[lints.clippy]
all = { level = "warn", priority = -1 }

unwrap_used = "deny"
panic = "deny"
unreachable = "deny"
todo = "deny"
unimplemented = "deny"

indexing_slicing = "deny"
string_slice = "deny"
unwrap_in_result = "deny"
panic_in_result_fn = "deny"
missing_panics_doc = "warn"
