[package]
name = "wings-rs"
rust-version = { workspace = true }
version = "1.0.0-pre.6"
edition = "2024"

[dependencies]
unrar = { path = "../unrar-rs" }
tracing = "0.1.41"
tracing-subscriber = { version = "=0.3.19", features = ["chrono"] } # temporary pin to avoid new ansi escaping
tracing-appender = "0.2.3"
anyhow = { workspace = true }
axum = { workspace = true }
axum-server = { workspace = true }
axum-extra = { workspace = true }
bollard = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
utoipa = { workspace = true }
utoipa-axum = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
colored = "3.0.0"
chrono = { workspace = true }
nestify = "0.3.3"
rayon = "1.10.0"
serde_norway = "0.9.42"
serde_default = "0.2.0"
futures-util = { workspace = true }
tokio-util = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
tar = "0.4.45"
zip = { version = "8.0.0", default-features = false, features = ["bzip2", "deflate", "time", "zstd", "lzma", "xz"] }
sevenz-rust2 = { version = "0.20.0", features = ["deflate", "compress", "brotli", "zstd", "bzip2", "ppmd", "lz4"] }
flate2 = { version = "1.1.1", default-features = false, features = ["zlib-rs"] }
jwt = "0.16.0"
hmac = { version = "0.12.1", features = ["std"] }
sha2 = "0.10.9"
ddup-bak = "0.8.0"
infer = "0.19.0"
rustls = { version = "0.23.27", features = ["aws-lc-rs"] }
ignore = { version = "0.4.23", features = ["simd-accel"] }
sha1 = "0.10.6"
futures = "0.3.31"
russh = "0.57.0"
russh-sftp = "2.1.1"
md5 = "0.8.0"
human_bytes = "0.4.3"
ansi_term = "0.12.1"
clap = { version = "4.5.37", features = ["derive"] }
dialoguer = "0.12.0"
sysinfo = "0.38.0"
crc32fast = "1.4.2"
cap-std = "4.0.0"
rustix = "1.0.7"
cidr = { version = "0.3.1", features = ["serde"] }
hickory-resolver = "0.25.2"
constant_time_eq = "0.4.2"
new_mime_guess = "4.0.4"
async-trait = "0.1.88"
cron = { version = "0.15.0", features = ["serde"] }
chrono-tz = "0.10.4"
gzp = "2.0.0"
lzma-rust2 = { version = "0.16.1", features = ["optimization"] }
bzip2 = "0.6.0"
zstd = { version = "0.13.3", features = ["zstdmt"] }
base64 = "0.22.1"
chunked_vec = "=0.3.4"
async-channel = "2.5.0"
lzzzz = "2.0.0"
xmltree = { version = "0.12.0", features = ["attribute-order"] }
rust-ini = "0.21.3"
regex = { workspace = true }
serde_regex = "1.1.0"
compact_str = { git = "https://github.com/ParkMyCar/compact_str.git", version = "0.9.0", features = ["serde", "utoipa"] }
memchr = "2.7.6"
thin-vec = "0.2.14"
moka = { version = "0.12.12", features = ["future"] }
ouroboros = "0.18.5"
percent-encoding = "2.3.2"
positioned-io = "0.3.5"
rmp-serde = "1.3.1"
accept-header = "0.2.3"
mime = "0.3.17"
toml = { version = "1.0.1", features = ["preserve_order"] }
sntpc-net-tokio = "1.0.1"
sntpc = { version = "0.8.1", features = ["std"] }
libz-ng-sys = "=1.1.23" # temporary pin due to riscv64 issues
notify = "8.2.0"

[target.'cfg(unix)'.dependencies]
users = "0.11.0"

[target.'cfg(all(target_os = "linux", target_arch = "x86_64"))'.dependencies]
tikv-jemallocator = "0.6.0"

[build-dependencies]
reqwest = { workspace = true, features = ["blocking"] }
serde = { workspace = true }
serde_json = { workspace = true }
zstd = { version = "0.13.3", features = ["zstdmt"] }
